# kino

./: .gitignore  base_requests.py  config.py  docker-compose.yaml  main.py  ngrok_bot.yaml  ngrok_server.yaml  pyproject.toml  readme.txt  requirements.txt  send_messages.py  server.py  sql_create.py  text.txt  Шаблон билета.docx
pkg/: log.py
webapp_site/: server.py
webapp_site/pkg/: log.py
xml_files/: ekb_1529_20230605_144134145.xml  ekb_1529_20230614_205003145.xml  ekb_1529_20230615_080436145.xml  ekb_1529_20230615_121437145.xml  ekb_1529_20230615_122358145.xml  ekb_1529_20230615_161646145.xml  ekb_1529_20230615_194740145.xml  ekb_1529_20230617_093301145.xml  ekb_1529_20230617_105008145.xml  ekb_1529_20230618_092543145.xml  ekb_1529_20230618_122714145.xml  ekb_1529_20230618_123121145.xml  ekb_1529_20230618_131749145.xml  ekb_1529_20230618_132400145.xml  ekb_1529_20230618_132626145.xml  ekb_1529_20230618_164402145.xml  ekb_1529_20230618_170203145.xml  ekb_1529_20230618_174921145.xml  ekb_1529_20230618_175837145.xml  ekb_1529_20230618_181138145.xml  ekb_1529_20230618_181438145.xml  ekb_1529_20230622_141531145.xml  ekb_1529_20230622_142311145.xml  ekb_1529_20230623_182110145.xml  ekb_1529_20230623_182137145.xml  ekb_1529_20230623_185421145.xml  ekb_1529_20230624_125452145.xml  ekb_1529_20230624_130945145.xml  ekb_1529_20230625_141009145.xml  ekb_1529_20230625_155241145.xml  ekb_1529_20230625_163850145.xml  ekb_1529_20230626_132147145.xml  ekb_1529_20230626_132313145.xml  ekb_1529_20230626_132455145.xml  ekb_1529_20230626_132550145.xml  ekb_1529_20230626_132602145.xml  (+18350 more)
(+17 files in other folders)
