[tool.poetry]
name = "kino-1"
version = "0.1.0"
description = ""
authors = ["Vasiliynemix <vasyanemix@gmail.com>"]
readme = "README.md"
packages = [{include = "kino"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
telebot = "^0.0.5"
loguru = "^0.7.2"
fastapi = "^0.111.0"
cherrypy = "^18.10.0"
django = "^5.0.6"
python-dotenv = "^1.0.1"
yookassa = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
